2013-11-19  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59164
	* gcc.dg/torture/pr59164.c: New testcase.

2013-11-19  Richard Biener  <rguenther@suse.de>

	PR middle-end/58956
	* gcc.dg/torture/pr58956.c: New testcase.

2013-11-19  Marek Polacek  <polacek@redhat.com>

	* c-c++-common/ubsan/null-1.c: New test.
	* c-c++-common/ubsan/null-2.c: New test.
	* c-c++-common/ubsan/null-3.c: New test.
	* c-c++-common/ubsan/null-4.c: New test.
	* c-c++-common/ubsan/null-5.c: New test.
	* c-c++-common/ubsan/null-6.c: New test.
	* c-c++-common/ubsan/null-7.c: New test.
	* c-c++-common/ubsan/null-8.c: New test.
	* c-c++-common/ubsan/null-9.c: New test.
	* c-c++-common/ubsan/null-10.c: New test.
	* c-c++-common/ubsan/null-11.c: New test.
	* gcc.dg/ubsan/c99-shift-2.c: Adjust dg-output.
	* c-c++-common/ubsan/shift-1.c: Likewise.
	* c-c++-common/ubsan/div-by-zero-3.c: Likewise.

2013-11-19  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/c11-complex-1.c: Use dg-add-options ieee.

2013-11-19  Jan Hubicka  <jh@suse.cz>

	* ipa/devirt9.C: Verify that the optimization happens already before.
	whole-program.

2013-11-19  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/57517
	* gfortran.fortran-torture/compile/pr57517.f90: New testcase.
	* gcc.dg/torture/pr57517.c: Likewise.

2013-11-19  Jan Hubicka  <jh@suse.cz>

	* gcc.target/i386/memcpy-3.c: New testcase.

2013-11-18  Jan Hubicka  <jh@suse.cz>
	    Uros Bizjak  <ubizjak@gmail.com>

	PR middle-end/59175
	* gcc.target/i386/memcpy-2.c: Fix template;
	add +1 so the testcase passes at 32bit.

2013-11-18  Dominique d'Humieres  <dominiq@lps.ens.fr>

	* c-c++-common/cilk-plus/PS/reduction-3.c: Use stdlib.h.
	Remove spurious FIXME.

2013-11-18  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* c-c++-common/cilk-plus/PS/body.c: Add fopenmp effective target check.

2013-11-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53473
	* g++.dg/cpp0x/constexpr-noexcept7.C: New.

2013-11-18  Richard Biener  <rguenther@suse.de>
